--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <!-- Nav -->
         <nav class="main-nav">
-            <img src="./assest/image/logo.png" alt="microsoft" class="logo">
+            <img src="./assest/image/logo.png" width="110" height="30" alt="microsoft" class="logo" loading="lazy">
             <ul class="main-menu">
                 <li><a href="#">Office</a></li>
                 <li><a href="#">Windows</a></li>
@@ -79,7 +79,7 @@
             </ul>
             <ul>
             <li>
-              <img src="./assest/image/card4.png" width="260" height="157" alt="The new Microsoft Edge" />
+              <img src="./assest/image/card4.png" width="260" height="157" alt="The new Microsoft Edge" loading="lazy" />
               <h3>The new Microsoft Edge</h3>
               <p>
                 Expect more. World class performance, with more privacy, more
